--- a/DotNetCore/MVC/ShopEase/Views/Order/OrderDetail.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Order/OrderDetail.cshtml
@@ -24,7 +24,7 @@
             </tr>
             <tr>
                 <td><b>Product Name:</b></td>
-                <td>@Model.ProductName</td>
+                <td>@Model.Title</td>
             </tr>
             <tr>
                 <td><b>Image:</b></td>
