--- a/DotNetCore/MVC/ShopEase/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index"><b>Product</b></a>
                         </li> *@
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="DemoJavaScript" ><b>Demo Java Script</b></a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="ProductSearch"><b>Search</b></a>
                         </li>
                         @{
