Created a new PlaceOrderFromCart action in order controller for multiple data insert in orders and OrderItems table and added Cart link on UI

--- a/DotNetCore/MVC/ShopEase/Views/Cart/Index.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Cart/Index.cshtml
@@ -40,7 +40,7 @@
 
     <div>
         <p style="display: inline-block; margin-right: 20px;"><b>Total Items:</b> @ViewBag.TotalItems</p>
-        <p style="display: inline-block;"><b>Total Price:</b> @ViewBag.TotalPrice</p>
+        <p style="display: inline-block;"><b>Total Price:</b> @TempData["TotalPrice"]</p>
     </div>    
     <br />
     @if (Model.Count > 0)
