--- a/DotNetCore/MVC/ShopEase/Views/Account/Login.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Account/Login.cshtml
@@ -15,13 +15,13 @@
 
             <div class="form-group">
                 <label asp-for="Email" class="control-label"><b>Email</b></label>
-                <input asp-for="Email" value="salman21@gmail.com" class="form-control" />
+                <input asp-for="Email" value="nazishamd@gmail.com" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group">
                 <label asp-for="Password" class="control-label"><b>Password</b></label>
-                <input asp-for="Password" value="salman0002" type="password" class="form-control" />
+                <input asp-for="Password" value="nazish101" type="password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <br />
