--- a/DotNetCore/MVC/ShopEase/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
                         </li>
                         @{
                             int? customerId = Convert.ToInt32(Context.Session.GetInt32("CustomerId"));
+                            string customerFullName = Context.Session.GetString("CustomerFullName");
                         }
                         @if (customerId == null || customerId <= 0)
                         {
@@ -57,6 +58,16 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout"><b>Log Out</b></a>
+                            </li>
+                            <li class="nav-item">
+                                <span class="nav-link text-primary"><b>Welcome, @customerFullName</b></span>
+                            </li>
+                            <li class="nav-item" style="margin-left: 600px;">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="Index">
+                                    <i class="fas fa-shopping-cart"></i>
+                                    <img src="~/UploadedFiles/Cart.png" style="width: 40px; height: 40px;">
+                                    <b>Cart</b>
+                                </a>
                             </li>
                         }
                     </ul>
