--- a/DotNetCore/MVC/ShopEase/Views/Order/PlaceOrder.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Order/PlaceOrder.cshtml
@@ -44,14 +44,14 @@
             <div class="form-group row">
                 <label for="FullName" class="col-md-4 col-form-label"><b>Full Name:</b></label>
                 <div class="col-md-4">
-                    <input type="text" id="FullName" name="FullName" class="form-control" />
+                    <input type="text" id="FullName" name="FullName" class="form-control" maxlength="15" />
                 </div>
             </div>
             <br />
             <div class="form-group row">
                 <label for="CardNumber" class="col-md-4 col-form-label"><b>Card Number:</b></label>
                 <div class="col-md-4">
-                    <input type="text" id="CardNumber" value="9080500750602099" name="CardNumber" class="form-control" />
+                    <input type="text" id="CardNumber" value="9080500750602099" name="CardNumber" maxlength="16" class="form-control" />
                 </div>
             </div>
             <br />
@@ -82,7 +82,7 @@
             <div class="form-group row">
                 <label for="CVV" class="col-md-4 col-form-label"><b>CVV Number:</b></label>
                 <div class="col-md-4">
-                    <input type="text" id="CVV" name="CVV" class="form-control" />
+                    <input type="text" id="CVV" name="CVV" maxlength="4" class="form-control" />
                 </div>
             </div>
             <br />
