Added new query for Employees1 table where we Exclude the employees data whose department is same after change on that day

--- a/DotNetCore/MVC/ShopEase/Views/Customer/ShowMyDataUsingAjax.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Customer/ShowMyDataUsingAjax.cshtml
@@ -1,7 +1,5 @@
-﻿
-<div class="col-md-4">
+﻿<div class="col-md-4">
     <div id="dataContainer">
-        
     </div>
     <div style="margin-left: 2px;">
         <input type="submit" id="AddToCart" value="Add To Cart" class="btn btn-primary" />
