--- a/DotNetCore/MVC/ShopEase/Views/HealthManagement/GetDoctorPrescription.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/HealthManagement/GetDoctorPrescription.cshtml
@@ -54,6 +54,6 @@
         <hr class="w-50" />
     </div>
 }
-<div class="text-left" style="margin-left: 200px;">
-    <b>View Original</b>
-</div>
+@* <div class="text-left" style="margin-left: 200px;">
+    <a href="https://localhost:7150/HealthManagement/GetPatientMedicineDetails?MadicalRecordId=@Model.MadicalRecordId"><b>Original View</b></a>
+</div> *@
