--- a/DotNetCore/MVC/ShopEase/Views/Customer/ShowMyApiDataUSingAJAX.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Customer/ShowMyApiDataUSingAJAX.cshtml
@@ -11,19 +11,73 @@
     <script>
         // Function to fetch API data
         async function fetchApiData() {
-            try {
-                const response = await fetch("https://localhost:7073/api/Doctors/GetAllDoctors");
-                if (!response.ok) {
-                    throw new Error("Could not retrieve API data.");
-                }
-                const data = await response.json();
-                renderData(data);
-            } catch (error) {
-                debugger;
-                $("#apiDataContainer").html("<p>Failed to fetch API data: " + error.message + "</p>");
-                console.error(error);
+            debugger;
+            const userAction = async () => {
+                const response = await fetch('https://qa-member.astm.org/m1c/api/v1/value', {
+                    //method: 'POST',
+                    body: myBody, // string or object
+                    headers: {
+                        'Content-Type': 'application/json'
+                    }
+                });
+                const myJson = await response.json(); //extract JSON from the http response
+                // do something with myJson
             }
+
+            // fetch('https://qa-member.astm.org/m1c/api/v1/value')
+            //     .then(response => {
+            //         if (!response.ok) {
+            //             throw new Error('Network response was not ok');
+            //         }
+            //         return response.json();
+            //     })
+            //     .then(data => {
+            //         console.log('Data received:', data);
+            //     })
+            //     .catch(error => {
+            //         console.error('There was a problem with the fetch operation:', error);
+            //     });
+
+            // debugger;
+            // try {
+            //     const apiUrl = 'https://localhost:7073/api/Doctors/GetAllDoctors';
+            //     response = async fetch(apiUrl);
+            //     debugger;
+            //     if (!response.ok) {
+            //         throw new Error("Could not retrieve API data.");
+            //     }
+            //     const data = await response.json();
+            //     renderData(data);
+            // } catch (error) {
+            //     debugger;
+            //     $("#apiDataContainer").html("<p>Failed to fetch API data: " + error.message + "</p>");
+            //     console.error(error);
+            // }
         }
+
+
+
+        // Define the API URL
+        //const apiUrl = 'https://qa-member.astm.org/m1c/api/v1/value';
+        const apiUrl = 'https://localhost:7073/api/Doctors/GetAllDoctors';
+
+        // Make a GET request
+        fetch(apiUrl)
+            debugger;
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                return response.json();
+            })
+            .then(data => {
+                debugger;
+                console.log(data);
+            })
+            .catch(error => {
+                debugger;
+                console.error('Error:', error);
+            });
 
         // Function to render data on the UI
         function renderData(apiResponse) {
@@ -44,6 +98,6 @@
         }
 
         // Event listener for fetch data button
-        $("#fetchDataBtn").click(fetchApiData);
+        $("#fetchDataBtn").click(fetchApiData());
     </script>
 }
