--- a/DotNetCore/MVC/ShopEase/Views/Customer/ShowMyApiDataUSingAJAX.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Customer/ShowMyApiDataUSingAJAX.cshtml
@@ -10,50 +10,50 @@
 @section scripts {
     <script>
         // Function to fetch API data
-        async function fetchApiData() {
-            debugger;
-            const userAction = async () => {
-                const response = await fetch('https://qa-member.astm.org/m1c/api/v1/value', {
-                    //method: 'POST',
-                    body: myBody, // string or object
-                    headers: {
-                        'Content-Type': 'application/json'
-                    }
-                });
-                const myJson = await response.json(); //extract JSON from the http response
-                // do something with myJson
-            }
+        // async function fetchApiData() {
+        //     debugger;
+        //     const userAction = async () => {
+        //         const response = await fetch('https://qa-member.astm.org/m1c/api/v1/value', {
+        //             method: 'GET',
+        //             // body: myBody, // string or object
+        //             headers: {
+        //                 'Access-Control-Allow-Origin': '*',
+        //             }
+        //         });
+        //         const myJson = await response.json(); //extract JSON from the http response
+        //         // do something with myJson
+        //     }
 
-            // fetch('https://qa-member.astm.org/m1c/api/v1/value')
-            //     .then(response => {
-            //         if (!response.ok) {
-            //             throw new Error('Network response was not ok');
-            //         }
-            //         return response.json();
-            //     })
-            //     .then(data => {
-            //         console.log('Data received:', data);
-            //     })
-            //     .catch(error => {
-            //         console.error('There was a problem with the fetch operation:', error);
-            //     });
+        //     // fetch('https://qa-member.astm.org/m1c/api/v1/value')
+        //     //     .then(response => {
+        //     //         if (!response.ok) {
+        //     //             throw new Error('Network response was not ok');
+        //     //         }
+        //     //         return response.json();
+        //     //     })
+        //     //     .then(data => {
+        //     //         console.log('Data received:', data);
+        //     //     })
+        //     //     .catch(error => {
+        //     //         console.error('There was a problem with the fetch operation:', error);
+        //     //     });
 
-            // debugger;
-            // try {
-            //     const apiUrl = 'https://localhost:7073/api/Doctors/GetAllDoctors';
-            //     response = async fetch(apiUrl);
-            //     debugger;
-            //     if (!response.ok) {
-            //         throw new Error("Could not retrieve API data.");
-            //     }
-            //     const data = await response.json();
-            //     renderData(data);
-            // } catch (error) {
-            //     debugger;
-            //     $("#apiDataContainer").html("<p>Failed to fetch API data: " + error.message + "</p>");
-            //     console.error(error);
-            // }
-        }
+        //     debugger;
+        //     try {
+        //         const apiUrl = 'https://localhost:7073/api/Doctors/GetAllDoctors';
+        //         response = async fetch(apiUrl);
+        //         debugger;
+        //         if (!response.ok) {
+        //             throw new Error("Could not retrieve API data.");
+        //         }
+        //         const data = await response.json();
+        //         renderData(data);
+        //     } catch (error) {
+        //         debugger;
+        //         $("#apiDataContainer").html("<p>Failed to fetch API data: " + error.message + "</p>");
+        //         console.error(error);
+        //     }
+        // }
 
 
 
@@ -62,9 +62,15 @@
         const apiUrl = 'https://localhost:7073/api/Doctors/GetAllDoctors';
 
         // Make a GET request
-        fetch(apiUrl)
-            debugger;
-            .then(response => {
+        fetch(apiUrl, {
+            method: 'GET',
+            headers: {
+                'Access-Control-Allow-Origin': '*',
+                'Access-Control-Request-Method': '*',
+            }
+        })
+        .then(response => {
+                debugger;
                 if (!response.ok) {
                     throw new Error('Network response was not ok');
                 }
@@ -79,25 +85,25 @@
                 console.error('Error:', error);
             });
 
-        // Function to render data on the UI
-        function renderData(apiResponse) {
-            const container = $("#apiDataContainer");
-            let html = "";
-            if (apiResponse && apiResponse.length > 0) {
-                apiResponse.forEach(item => {
-                    html += `<div><p><b>${item.Id}, ${item.FullName}, 
-                                        ${item.Gender}, ${item.Email}, 
-                                        ${item.RegistrationNumber}, 
-                                        ${item.Department}, 
-                                        ${item.City}</b></p></div>`;
-                });
-            } else {
-                html = "<p>No data available.</p>";
-            }
-            container.html(html);
-        }
+        // // Function to render data on the UI
+        // function renderData(apiResponse) {
+        //     const container = $("#apiDataContainer");
+        //     let html = "";
+        //     if (apiResponse && apiResponse.length > 0) {
+        //         apiResponse.forEach(item => {
+        //             html += `<div><p><b>${item.Id}, ${item.FullName}, 
+        //                                 ${item.Gender}, ${item.Email}, 
+        //                                 ${item.RegistrationNumber}, 
+        //                                 ${item.Department}, 
+        //                                 ${item.City}</b></p></div>`;
+        //         });
+        //     } else {
+        //         html = "<p>No data available.</p>";
+        //     }
+        //     container.html(html);
+        // }
 
         // Event listener for fetch data button
-        $("#fetchDataBtn").click(fetchApiData());
+        //$("#fetchDataBtn").click(fetchApiData());
     </script>
 }
