Added a new controller Restaurant where we perform CRUD

--- a/DotNetCore/MVC/ShopEase/Views/Customer/ShowMyApiDataUSingAJAX.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Customer/ShowMyApiDataUSingAJAX.cshtml
@@ -1,4 +1,4 @@
-﻿<div>
+﻿@* <div>
     <h2>Show My API Data</h2>
     <div id="apiDataContainer">
     </div>
@@ -107,3 +107,4 @@
         //$("#fetchDataBtn").click(fetchApiData());
     </script>
 }
+ *@
