--- a/DotNetCore/MVC/ShopEase/Views/Customer/ShowMyDataUsingAjax.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Customer/ShowMyDataUsingAjax.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="col-md-4">
+﻿@* <div class="col-md-4">
     <div id="dataContainer">
     </div>
     <div style="margin-left: 2px;">
@@ -46,4 +46,4 @@
             performAction("AddToCart");
         });
     });
-</script>
+</script> *@
